@@ -1,3 +1,8 @@
+2008-01-22  Schloegl Alois  <alois.schloegl@tugraz.at>
+
+	* specfun/erfinv.m: Replace z_old and z_new by a single variable z.
+	Simplify initial checks on argument values.
+
 2008-01-22  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* plot/gnuplot_drawnow.m: New function corresponding to the
